# Delta-Cup-2026-Safety-System

./: cloud_sender.py  logic_processor.py  main.py  plc_controller.py
yolo-trainer/: 01_extract_frame.py  02_gdino.py  03_plot_examples.py  04_train_yolo.py  05_inference.py  README.md  main.py  pyproject.toml  train.sh
yolo-trainer/dataset/: ppe.yaml
yolo-trainer/result/: results.csv
